<resources>
    <string name="app_name">Flashcard</string>
    <string name="inactive">INACTIVE</string>
    <string name="active">ACTIVE</string>
    <string name="dueDateInt">12/12/12</string>
    <string name="dueDateString">Due Date</string>
    <string name="numOfFlashcards">123</string>
    <string name="flashcardTitle">Title</string>
    <string name="deleteString">Delete</string>
    <string name="sortByString">Sort By</string>
    <string name="button">Button</string>
    <string name="edit_flashcard">Edit Flashcard</string>
    <string name="delete_flashcard">Delete Flashcard</string>
</resources>
